# mac-stats

./: .env.config  .gitignore  CHANGELOG.md  CLAUDE.md  GRAPHICS_OPTIMIZATION.md  MENU_BAR_AND_PROCESS_PLAN.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_PROGRESS.md  PERFORMANCE_REVIEW.md  README.md  agents.md  backend_trace_20260117_234534.txt  config.example.json  config.minimal.json  run  run.sh  take-screenshot.py  take-screenshot.sh  trace_backend.sh
005-openclaw-reviewer/: 005-openclaw-reviewer.md
006-feature-coder/: FEATURE-CODER.md
Casks/: mac-stats.rb
agents-tasks/: README.md  log-001-discord-fetch-url.md  log-002-log-rotation.md  log-003-temperature-unavailable.md  log-004-image-fetch-404.md  log-005-operator-read-scope-error.md  log-006-duplicate-user-messages-ollama.md  log-007-loop-protection-visibility.md  log-008-discord-fetch-url-redmine-hint.md  log-009-redmine-api-422-updated-on.md  review-2026-02-27-yolo.md  review-2026-02-27.md  scan-log.md
docs/: 000_task_optimize_summary.md  001_task_optimize_backend.md  002_task_optimize_frontend.md  003_task_optimize_advanced_idle.md  004_notes.md  004_task_monitoring-app-summary.md  005_task_cross_platform.md  006_roadmap_ai_tasks.md  007_discord_agent.md  008_brave_agent.md  009_scheduler_agent.md  010_mcp_agent.md  011_local_cmd_agent.md  012_cursor_agent_tasks.md  012_ollama_context_skills.md  013_task_agent.md  014_python_agent.md  015_ollama_api.md  016_skill_agent.md  017_llm_agents.md  019_agent_session_and_memory.md  020_agent_task_flow_analysis.md  021_router_and_agents.md  021_task_system_fix_feb2026.md  021_task_system_fix_feb2026_DONE.md  022_feature_review_plan.md  023_externalized_prompts.md  024_downloads_organizer.md  024_mac_stats_merge_defaults.md  025_expectation_check_design.md  025_expectation_check_design_DONE.md  025_redmine_api_skill.md  026_light_browser_agent_plan.md  026_light_browser_agent_plan_DONE.md  027_discord_log_review.md  028_discord_attachments.md  (+41 more)
src-tauri/: Cargo.toml  build.rs  index.html  tauri.conf.json
src-tauri/.claude/: ralph-loop.local.md
src-tauri/.claude/agents/: ask-local-ollama.md
src-tauri/defaults/: discord_channels.example.json  discord_channels.json  downloads-organizer-rules.md  escalation_patterns.md  schedules.example.json  session_reset_phrases.md
src-tauri/defaults/agents/: memory.md  soul.md
src-tauri/defaults/agents/agent-000/: agent.json  skill.md  testing.md
src-tauri/defaults/agents/agent-001/: agent.json  skill.md  testing.md
src-tauri/defaults/agents/agent-002/: agent.json  skill.md  testing.md
src-tauri/defaults/agents/agent-003/: agent.json  skill.md  testing.md
src-tauri/defaults/agents/agent-004/: agent.json  memory.md  skill.md  testing.md
src-tauri/defaults/agents/agent-005/: agent.json  skill.md  testing.md
src-tauri/defaults/agents/agent-006-redmine/: skill.md
src-tauri/defaults/agents/agent-abliterated/: agent.json  skill.md  soul.md  testing.md
src-tauri/defaults/prompts/: execution_prompt.md  planning_prompt.md
src-tauri/examples/: example_com_history_reload_smoke.rs  example_com_hover_drag_smoke.rs  example_com_search_twice.rs  heise_flow.rs  httpbin_delay_nav.rs
src-tauri/src/: browser_doctor.rs  circuit_breaker.rs  feature_health.rs  keyed_queue.rs  lib.rs  logging.rs  main.rs  ollama_queue.rs  operator_task_pressure.rs  search_result_shaping.rs  session_memory.rs  skills.rs  state.rs
src-tauri/src/agents/: cli.rs  mod.rs  watch.rs
src-tauri/src/alerts/: channels.rs  mod.rs  rules.rs
src-tauri/src/browser_agent/: artifact_atomic.rs  artifact_limits.rs  cdp_downloads.rs  cdp_fetch_proxy_auth.rs  cdp_grant_permissions.rs  cdp_target_crash_listener.rs  cdp_trace_archive.rs  cdp_url.rs  cookie_storage.rs  credentials.rs  dom_snapshot.rs  http_fallback.rs  mod.rs  screenshot_annotate.rs  tests.rs  url_filter.rs
src-tauri/src/browser_agent/data/: default_browser_blocklist.txt
src-tauri/src/commands/: abort_cutoff.rs  agent_descriptions.rs  agent_session.rs  agent_session_limits.rs  agents.rs  alerts.rs  brave.rs  browser.rs  browser_helpers.rs  browser_tool_dispatch.rs  compaction.rs  compaction_hooks.rs  content_reduction.rs  context_assembler.rs  conversation_sanitize.rs  curated_memory.rs  cursor_agent.rs  delegation_tool_dispatch.rs  directive_tags.rs  discord.rs  discord_draft_stream.rs  downloads_organizer.rs  fast_lane.rs  harness_ops.rs  html_cleaning.rs  judge.rs  llm_screenshot.rs  logging.rs  loop_guard.rs  misc_tool_dispatch.rs  mod.rs  monitors.rs  native_tools.rs  network_tool_dispatch.rs  ollama.rs  ollama_chat.rs  ollama_config.rs  ollama_frontend_chat.rs  ollama_memory.rs  ollama_models.rs  (+36 more)
src-tauri/src/commands/content_reduction/: mod.rs  tests.rs
src-tauri/src/commands/html_cleaning/: mod.rs  tests.rs
src-tauri/src/config/: browser.rs  mod.rs  protected_mutation.rs
src-tauri/src/discord/: api.rs  mod.rs  token.rs
src-tauri/src/downloads_organizer/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/ffi/: ioreport.rs  mod.rs  objc.rs
src-tauri/src/logging/: legacy.rs  mod.rs  redact.rs  subsystem.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/metrics/: history.rs  mod.rs
src-tauri/src/monitors/: mod.rs  social.rs  website.rs
src-tauri/src/ollama/: llm_backend.rs  mod.rs  model_list_cache.rs  models.rs
src-tauri/src/perplexity/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/redmine/: mod.rs
src-tauri/src/scheduler/: delivery_awareness.rs  heartbeat.rs  mod.rs
src-tauri/src/security/: attachment_roots.rs  host_exec_env.rs  mod.rs
src-tauri/src/task/: cli.rs  mod.rs  review.rs  runner.rs
src-tauri/src/ui/: mod.rs  status_bar.rs
src-tauri/src/user_info/: mod.rs
(+132 files in other folders)
