[package]
name = "mac_stats"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[lib]
name = "mac_stats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mac-stats-backend"
path = "src/main.rs"

[dependencies]
tauri = { version = "1", features = [ "custom-protocol" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
objc2 = "0.6.3"
macsmc = "0.1"
core-foundation = "0.10"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSDictionary", "NSArray", "NSAttributedString", "NSRange", "NSObject", "NSProcessInfo", "NSRunLoop"] }
objc2-app-kit = { version = "0.3.2", features = [
  "NSApplication",
  "NSColor",
  "NSFont",
  "NSFontDescriptor",
  "NSStatusBar",
  "NSStatusItem",
  "NSStatusBarButton",
  "NSMenu",
  "NSMenuItem",
  "NSAttributedString",
  "NSParagraphStyle",
  "NSText",
  "NSButton",
  "NSControl",
  "NSResponder",
  "NSView",
  "objc2-core-foundation"
] }

