[package]
name = "mac_stats"
version = "0.1.34"
description = "Local AI agent for macOS (Rust + Tauri): Ollama chat, Discord bot, task runner, scheduler, MCP—all on your Mac. No cloud, no telemetry. Menu bar shows CPU/GPU/RAM/disk when you need it; website monitoring and alerts. Built for minimal CPU overhead."
authors = ["raro42"]
edition = "2021"
default-run = "mac_stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[lib]
name = "mac_stats"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "mac_stats"
path = "src/main.rs"

[dependencies]
tauri = { version = "1", features = [ "custom-protocol", "shell-open", "devtools" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
objc2 = "0.6.3"
macsmc = "0.1"
core-foundation = "0.10"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSDictionary", "NSArray", "NSAttributedString", "NSRange", "NSObject", "NSProcessInfo", "NSRunLoop"] }
objc2-app-kit = { version = "0.3.2", features = [
  "NSApplication",
  "NSColor",
  "NSFont",
  "NSFontDescriptor",
  "NSStatusBar",
  "NSStatusItem",
  "NSStatusBarButton",
  "NSMenu",
  "NSMenuItem",
  "NSAttributedString",
  "NSParagraphStyle",
  "NSText",
  "NSButton",
  "NSControl",
  "NSResponder",
  "NSView",
  "objc2-core-foundation"
] }
battery = "0.7"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
security-framework = "2.9"
security-framework-sys = "2.9"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
url = "2.5"
anyhow = "1.0"
base64 = "0.22"
toml = "0.8"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "http", "model", "utils", "rustls_backend"] }
futures-util = "0.3"
notify = "6"
tokio-util = "0.7.18"
headless_chrome = "1.0"
regex = "1"
scraper = "0.19"

